--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<script src="./scripts/Enemy.js"></script>
+<script src="./scripts/Turret.js"></script>
+<script src="./scripts/Bullet.js"></script>
 <script src="./scripts/script.js"></script>
 </body>
 </html>
