logic done, TODO final touches

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
 <script src="./scripts/Enemy.js"></script>
+<script src="./scripts/BasicEnemy.js"></script>
+<script src="./scripts/TankEnemy.js"></script>
 <script src="./scripts/Turret.js"></script>
+<script src="./scripts/BasicTurret.js"></script>
+<script src="./scripts/SniperTurret.js"></script>
 <script src="./scripts/Bullet.js"></script>
+<script src="./scripts/SniperBullet.js"></script>
 <script src="./scripts/script.js"></script>
 </body>
 </html>
