logic done, TODO final touches

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <script src="./scripts/Enemy.js"></script>
 <script src="./scripts/BasicEnemy.js"></script>
+<script src="./scripts/BossEnemy.js"></script>
 <script src="./scripts/TankEnemy.js"></script>
 <script src="./scripts/Turret.js"></script>
 <script src="./scripts/BasicTurret.js"></script>
